--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
+    <script async="" src="//www.instagram.com/embed.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
